--- a/src/main/resources/templates/fragments/allOrderTable.html
+++ b/src/main/resources/templates/fragments/allOrderTable.html
@@ -29,7 +29,7 @@
     <td th:text="${#numbers.formatDecimal(order.totalAmount / 100, 2, 2)}"></td>
     <td th:text="${order.orderStatus}"></td>
     <td>
-      <form th:action="@{/order/update-status/{id}(id=${order.id})}" method="post">
+      <form th:action="@{/admin/order/update-status/{id}(id=${order.id})}" method="post">
         <select name="newStatus" required>
           <option value="">Select Status</option>
           <option value="PLACED" th:selected="${order.orderStatus == 'PLACED'}">Placed</option>
